[workspace]
members = ["external-scheduler"]

[workspace.dependencies]
clap = "4.6.1"
agave-scheduler-bindings  = { git = "https://github.com/anza-xyz/agave.git"}
serde_json = "1.0.145"
serde_repr = "0.1.20"
serde_with = "3.16.1"
min-max-heap = "1.3.0"
prost = "0.11.9"
prost-types = "0.11.9"
rts-alloc = "2.0.0"
arrayref = "0.3.9"
bincode = "1.3.3"
borsh = "1.6.0"
chrono = "0.4.42"
tokio = "1"