[workspace]
members = ["external-scheduler", "jito-protos", "scheduler-batch"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Dhruv Sharma"]

[profile.release]
opt-level = 3
debug = true

[profile.paranoid]
inherits = "release"
overflow-checks = true
debug-assertions = true

[profile.paranoid.package."*"]
overflow-checks = false
debug-assertions = false

[profile.performance]
inherits = "release"
lto = "fat"
codegen-units = 1
incremental = false

[workspace.dependencies]
agave-feature-set = { git = "https://github.com/anza-xyz/agave" }
agave-scheduler-batch.path = "./scheduler-batch"
agave-scheduler-bindings = { git = "https://github.com/anza-xyz/agave" }
# agave-scheduler-fifo.path = "./crates/scheduler-fifo"
# agave-scheduler-greedy-revenue.path = "./crates/scheduler-greedy-revenue"
# agave-scheduler-greedy-throughput.path = "./crates/scheduler-greedy-throughput"
# agave-schedulers.path = "./crates/schedulers"
agave-scheduling-utils = { git = "https://github.com/anza-xyz/agave" }
agave-transaction-view = { git = "https://github.com/anza-xyz/agave" }
arrayref = "0.3.9"
bincode = "1.3.3"
borsh = "1.6.0"
chrono = "0.4.42"
clap = "4.5.51"
crossbeam-channel = "0.5.15"
expect-test = "1.5.1"
eyre = "0.6.12"
futures = { version = "0.3.31", default-features = false }
indexmap = "2.13.0"
jito-protos.path = "./jito-protos"
metrics = "0.24.2"
min-max-heap = "1.3.0"
prost = "0.11.9"
prost-types = "0.11.9"
rts-alloc = "2.0.0"
serde = "1.0.228"
serde_json = "1.0.145"
serde_repr = "0.1.20"
serde_with = "3.16.1"
shaq = "1.0.0"
slotmap = "1.0.7"
solana-clock = "3.0.0"
solana-compute-budget-instruction = { git = "https://github.com/anza-xyz/agave" }
solana-compute-budget-interface = "3.0.0"
solana-cost-model = { git = "https://github.com/anza-xyz/agave" }
solana-fee = { git = "https://github.com/anza-xyz/agave" }
solana-fee-structure = "3.0.0"
solana-hash = "3.0.1"
solana-keypair = "3.0.1"
solana-message = "3.0.1"
solana-packet = "3.0.0"
solana-pubkey = "3.0.0"
solana-pubsub-client = "3.0.0"
solana-rpc-client = "3.0.0"
solana-rpc-client-types = "3.0.0"
solana-runtime-transaction = { git = "https://github.com/anza-xyz/agave" }
solana-sdk-ids = "3.0.0"
solana-signature = "3.0.0"
solana-svm-transaction = { git = "https://github.com/anza-xyz/agave" }
solana-system-transaction = "3.0.0"
solana-transaction = "4.0.0"
static_assertions = "1.1.0"
strum = "0.27.2"
tokio = "1.48.0"
tokio-util = "0.7.18"
toml = "1.1.2"
tonic = "0.9.2"
tonic-build = "0.9.2"
tracing = "0.1.41"
tracing-subscriber = "0.3.23"
