[package]
name = "agave-external-scheduler"
description = "External scheduler-bindings runner hosting pluggable pack strategies"

[dependencies]
clap = {workspace = true, features = ["derive"]}
agave-scheduler-bindings = {workspace = true}
serde ={ workspace = true, features = ["derive"]}
serde_json ={ workspace = true}
serde_with ={ workspace = true}
tokio ={ workspace = true, features = ["macros", "rt", "signal"]}
