[package]
name = "agave-external-scheduler"
description = "External scheduler-bindings runner hosting pluggable pack strategies"
version.workspace = true
edition.workspace = true

[dependencies]
clap = { workspace = true, features = ["derive"] }
agave-scheduler-bindings = {workspace = true, features = ["agave-unstable-api"] }
serde ={ workspace = true, features = ["derive"]}
serde_json ={ workspace = true}
serde_with ={ workspace = true}
tokio ={ workspace = true, features = ["macros", "rt", "signal", "net"]}
solana-pubkey ={ workspace = true}
tracing = {workspace = true, features = ["log"]}
tracing-subscriber = {workspace = true, features = ["fmt"]}
agave-scheduling-utils ={ workspace = true}
tokio-util = { workspace = true }
schedulers = { workspace = true }
jito-scheduler.workspace = true
futures = { workspace = true, features = ["alloc"] }
solana-keypair.workspace = true
toml.workspace = true
axum = { version = "0.8", features = ["json", "form"] }
tower-http = { version = "0.6", features = ["cors", "fs", "trace"] }
