[package]
name = "schedulers"
version.workspace = true
edition.workspace = true

[dependencies]
agave-scheduling-utils = {workspace = true, features = ["agave-unstable-api", "dev-context-only-utils"]}
chrono ={ workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive", "rc"] }
serde_repr = { workspace = true}
tracing = {workspace = true}
serde_with = {workspace = true}
solana-clock = { workspace = true }
solana-signature ={ workspace = true}
strum = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["sync"] }
agave-transaction-view.workspace = true
agave-feature-set.workspace = true
futures.workspace = true
solana-runtime-transaction = { workspace = true, features = ["agave-unstable-api"] }
solana-compute-budget-instruction = { workspace = true, features = ["agave-unstable-api"] }
solana-cost-model = { workspace = true, features = ["agave-unstable-api"] }
solana-fee = { workspace = true, features = ["agave-unstable-api"] }
solana-transaction = { workspace = true, features = ["wincode"] }
agave-scheduler-bindings.workspace = true
arrayref.workspace = true
wincode.workspace = true
borsh.workspace = true
crossbeam-channel.workspace = true
eyre.workspace = true
indexmap.workspace = true
jito-protos.workspace = true
metrics.workspace = true
min-max-heap.workspace = true
solana-fee-structure.workspace = true
solana-hash.workspace = true
solana-keypair.workspace = true
solana-message.workspace = true
solana-packet.workspace = true
solana-pubkey.workspace = true
solana-pubsub-client.workspace = true
solana-rpc-client.workspace = true
solana-rpc-client-types.workspace = true
solana-sdk-ids.workspace = true
solana-svm-transaction.workspace = true
static_assertions.workspace = true
tokio-util.workspace = true
tonic = { workspace = true, features = ["tls", "tls-roots"] }

[dev-dependencies]
wincode.workspace = true
expect-test.workspace = true
serde_json.workspace = true
solana-compute-budget-interface.workspace = true
solana-hash.workspace = true
solana-keypair.workspace = true
solana-message.workspace = true
solana-system-transaction.workspace = true
solana-transaction = { workspace = true, features = ["serde", "wincode"] }
