[package]
name = "tighter-batch-scheduler"
version.workspace = true
edition.workspace = true

[dependencies]
agave-scheduler-bindings.workspace = true
agave-scheduling-utils = { workspace = true, features = ["agave-unstable-api", "dev-context-only-utils"] }
agave-transaction-view.workspace = true
arrayref.workspace = true
wincode.workspace = true
borsh.workspace = true
crossbeam-channel.workspace = true
eyre.workspace = true
futures.workspace = true
indexmap.workspace = true
jito-protos.workspace = true
metrics.workspace = true
min-max-heap.workspace = true
solana-clock.workspace = true
solana-compute-budget-instruction = { workspace = true, features = ["agave-unstable-api"] }
solana-cost-model = { workspace = true, features = ["agave-unstable-api"] }
solana-fee = { workspace = true, features = ["agave-unstable-api"] }
solana-fee-structure.workspace = true
schedulers.workspace = true
solana-hash.workspace = true
solana-keypair.workspace = true
solana-message.workspace = true
solana-packet.workspace = true
solana-pubkey.workspace = true
solana-pubsub-client.workspace = true
solana-rpc-client.workspace = true
solana-rpc-client-types.workspace = true
solana-runtime-transaction = { workspace = true, features = ["agave-unstable-api"] }
solana-sdk-ids.workspace = true
solana-svm-transaction.workspace = true
solana-transaction = { workspace = true, features = ["wincode"] }
static_assertions.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tonic = { workspace = true, features = ["tls", "tls-roots"] }
tracing.workspace = true

[dev-dependencies]
solana-compute-budget-interface.workspace = true